--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -1,4 +1,4 @@
-﻿<div class="loader-container" *ngIf="loader">
+﻿<div e2e="progress-loader" class="loader-container" *ngIf="loader">
     <div class="spinner">
     </div>
 </div>
