--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
@@ -1,5 +1,5 @@
 ﻿<div class="basic-setup">
-    <div class="loader-container" *ngIf="loader">
+    <div e2e="progress-loader" class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
     <div class="setup-content">
