--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
@@ -1,4 +1,4 @@
-﻿<div class="loader-container" *ngIf="loader" oncontextmenu="return false">
+﻿<div e2e="progress-loader" class="loader-container" *ngIf="loader" oncontextmenu="return false">
     <div class="spinner">
     </div>
 </div>
