--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -23,12 +23,12 @@
         </h1>
         <div class="pull-right">
             <button type="button" class="btn" [popover]="myPopover" (click)="getTestLink()"><em class="material-icons">link</em>Get Test Link</button>
-            <button type="button" class="btn btn-primary pull-right" [disabled]="disablePreview" (click)="changeComponent()"><em class="material-icons">remove_red_eye</em> Preview</button>
+            <button e2e="preview-btn" type="button" class="btn btn-primary pull-right" [disabled]="disablePreview" (click)="changeComponent()"><em class="material-icons">remove_red_eye</em> Preview</button>
             <popover-content #myPopover [closeOnClickOutside]="true">
                 <label>Test Link</label>
                 <div class="url-container">
                     <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
-                    <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
+                    <em e2e="copytoclipboard-btn" class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
                 </div>
             </popover-content>
         </div>
