--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    <div class="test-status" *ngIf="isAnyCandidateExist">
+    <div class="test-status" *ngIf="isAnyCandidateExist && !hasTestEnded">
         <div class="container">
             <h5 *ngIf="!isTestCompleted">Estimated Test Completion Time: <span class="theme-text">{{estimatedTime}}</span></h5>
             <h5 class="theme-text" *ngIf="isTestCompleted">This test is completed.</h5>
